# slack-api-types

./: README.md  slack-api-types.cabal
lib/Slack/: API.hs
lib/Slack/API/: Base.hs  Bot.hs  Channel.hs  ChannelOpt.hs  ChannelOpt.hs-boot  Comment.hs  Error.hs  Event.hs  File.hs  Group.hs  IM.hs  Id.hs  Internal.hs  Item.hs  Payload.hs  Preferences.hs  Presence.hs  ReactionItem.hs  Self.hs  Session.hs  Team.hs  TeamPreferences.hs  Time.hs  Topic.hs  User.hs
lib/Slack/API/Event/: Subtype.hs
lib/Web/Slack/: Types.hs
lib/Web/Slack/Types/: Bot.hs  Channel.hs  ChannelOpt.hs  Comment.hs  Error.hs  Event.hs  File.hs  Group.hs  IM.hs  Id.hs  Item.hs  Payload.hs  Preferences.hs  Presence.hs  Self.hs  Session.hs  Team.hs  TeamPreferences.hs  Time.hs  Topic.hs  User.hs
lib/Web/Slack/Types/Event/: Subtype.hs
