name:                slack-api-types
version:             1.0.0.0
synopsis:            Collection of types for the Slack RTM API.
description:         See README.md
license:             MIT
bug-reports:         https://github.com/mpickering/slack-api/issues

license-file:        LICENSE
author:              Joe Hillenbrand
maintainer:          joehillen@gmail.com
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.10
source-repository head
    type: git
    location: https://github.com/joehillen/slack-api-types.git


library
  hs-source-dirs: lib
  ghc-options: -Wall -Werror
  default-language: Haskell2010
  default-extensions: RankNTypes
                    , TemplateHaskell
                    , OverloadedStrings
                    , LambdaCase
  build-depends: base >= 4.8
               , aeson
               , errors
               , lens
               , lens-aeson
               , text
               , time
               , time-locale-compat
  exposed-modules: Slack.API
                 , Slack.API.Base
                 , Slack.API.Bot
                 , Slack.API.Channel
                 , Slack.API.ChannelOpt
                 , Slack.API.Comment
                 , Slack.API.Error
                 , Slack.API.Event
                 , Slack.API.Event.Subtype
                 , Slack.API.File
                 , Slack.API.Group
                 , Slack.API.IM
                 , Slack.API.Id
                 , Slack.API.Item
                 , Slack.API.Payload
                 , Slack.API.Preferences
                 , Slack.API.Presence
                 , Slack.API.ReactionItem
                 , Slack.API.Self
                 , Slack.API.Session
                 , Slack.API.Team
                 , Slack.API.TeamPreferences
                 , Slack.API.Time
                 , Slack.API.Topic
                 , Slack.API.User
  other-modules: Slack.API.Internal
